add userData to login response
