# src/oas/v1.yaml
@@ -140,6 +140,10 @@ paths:
       responses:
         201:
           description: "Successful operation"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserForMe"
           headers:
             Set-Cookie:
               description: "Set-Cookie"
